# fatec-projeto-v

./: Dockerfile  README.md  docker-compose.yaml  dumpdatabase.sh  entrypoint.sh  pyproject.toml
app/backend/: Schemas.py  app.py
app/backend/routers/: Users.py
app/dump/database/: Users.bson  Users.metadata.json
app/llm/: Call_llm.py
